--- a/index.html
+++ b/index.html
@@ -463,18 +463,20 @@ section{ padding: 58px 0; }       /* también un poquito menos de alto */
 /* PRELOADER */
 #preloader {
   position: fixed;
-  inset: 0;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   background: radial-gradient(circle at top, #060606, #000);
-  display: flex;
-  align-items: center;
-  justify-content: center;
   z-index: 9999;
-  flex-direction: column;
 }
 
 .preloader-inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
-  gap: 10px;
   max-width: 240px;
 }
 
@@ -514,7 +516,6 @@ section{ padding: 58px 0; }       /* también un poquito menos de alto */
   100% { width: 0; }
 }
 
-/* cuando se oculta */
 body.preloaded #preloader {
   opacity: 0;
   pointer-events: none;
@@ -1060,21 +1061,51 @@ if (subtitleTarget) {
     } catch {}
   });
 
-    // ocultar preloader cuando cargue
+    // preloader: esperar assets antes de mostrar
   window.addEventListener('load', function() {
-    // dar un pelito de tiempo para que el video o imágenes tarden 1 toque
-    setTimeout(function() {
-      document.body.classList.add('preloaded');
-    }, 300);
-  });
+    // juntar todas las imágenes
+    const imgPromises = Array.from(document.images).map(img => {
+      if (img.complete) return Promise.resolve();
+      return new Promise(resolve => {
+        img.addEventListener('load', resolve, { once: true });
+        img.addEventListener('error', resolve, { once: true });
+      });
+    });
 
-  // fallback por si el load nunca dispara (red lenta, video bloqueado, etc.)
-  setTimeout(function() {
-    if (!document.body.classList.contains('preloaded')) {
+    // video de fondo (si lo hay)
+    const bgVideo = document.getElementById('bgVideo');
+    const videoPromise = bgVideo
+      ? new Promise(resolve => {
+          if (bgVideo.readyState >= 2) {
+            resolve();
+          } else {
+            bgVideo.addEventListener('loadeddata', resolve, { once: true });
+            bgVideo.addEventListener('error', resolve, { once: true });
+          }
+        })
+      : Promise.resolve();
+
+    // timeout por si la conexión es lenta o la tele es del pleistoceno
+    const timeout = new Promise(resolve => setTimeout(resolve, 6000));
+
+    Promise.race([
+      Promise.all([...imgPromises, videoPromise]),
+      timeout
+    ]).then(() => {
+      // marcar que cargó
       document.body.classList.add('preloaded');
-    }
-  }, 6000);
-</script>
+
+      // forzar repintado para esos dispositivos que no muestran nada hasta que te mueves
+      setTimeout(() => {
+        window.dispatchEvent(new Event('resize'));
+        window.scrollTo(0, window.pageYOffset + 1);
+        window.scrollTo(0, window.pageYOffset - 1);
+        if (window.AOS) {
+          AOS.refresh();
+        }
+      }, 200);
+    });
+  });
 </script>
 
 
