--- a/index.html
+++ b/index.html
@@ -577,9 +577,9 @@ body.preloaded #preloader {
       </div>
 
       <article class="show-feature left" data-aos="fade-up">
-        <a class="photo" href="assets/img/m3.JPG" target="_blank" rel="noopener">
+        <a class="photo" href="assets/img/m3.jpg" target="_blank" rel="noopener">
           <span class="year-badge">2025</span>
-          <img src="assets/img/comprimidas/comp-m3.JPG" alt="Fiestas Patrias — escena" loading="lazy">
+          <img src="assets/img/comprimidas/comp-m3.jpg" alt="Fiestas Patrias — escena" loading="lazy">
         </a>
         <div class="info">
           <h3>Show masivo en Hualpén</h3>
@@ -593,8 +593,8 @@ body.preloaded #preloader {
       </article>
 
       <article class="show-feature right" data-aos="fade-up">
-        <a class="photo" href="assets/img/m1.JPG" target="_blank" rel="noopener">
-          <img src="assets/img/comprimidas/comp-m1.JPG" alt="Fiestas Patrias — crowd" loading="lazy">
+        <a class="photo" href="assets/img/m1.jpg" target="_blank" rel="noopener">
+          <img src="assets/img/comprimidas/comp-m1.jpg" alt="Fiestas Patrias — crowd" loading="lazy">
         </a>
         <div class="info">
           <h3 class="glow-strong">Recepción</h3>
@@ -603,14 +603,14 @@ body.preloaded #preloader {
       </article>
 
       <div class="show-strip" data-aos="fade-up" aria-label="Detalles — Fiestas Patrias">
-        <a class="tile" href="assets/img/m2.JPG" target="_blank" rel="noopener">
-          <img src="assets/img/comprimidas/comp-m2.JPG" alt="Detalle 1" loading="lazy">
+        <a class="tile" href="assets/img/m2.jpg" target="_blank" rel="noopener">
+          <img src="assets/img/comprimidas/comp-m2.jpg" alt="Detalle 1" loading="lazy">
         </a>
-        <a class="tile" href="assets/img/m.JPG" target="_blank" rel="noopener">
-          <img src="assets/img/comprimidas/comp-m.JPG" alt="Detalle 2" loading="lazy">
+        <a class="tile" href="assets/img/m.jpg" target="_blank" rel="noopener">
+          <img src="assets/img/comprimidas/comp-m.jpg" alt="Detalle 2" loading="lazy">
         </a>
-        <a class="tile" href="assets/img/m4.JPG" target="_blank" rel="noopener">
-          <img src="assets/img/comprimidas/comp-m4.JPG" alt="Detalle 3" loading="lazy">
+        <a class="tile" href="assets/img/m4.jpg" target="_blank" rel="noopener">
+          <img src="assets/img/comprimidas/comp-m4.jpg" alt="Detalle 3" loading="lazy">
         </a>
       </div>
     </div>
@@ -744,8 +744,8 @@ body.preloaded #preloader {
         <a class="tile" href="assets/img/a3.png" target="_blank" rel="noopener">
           <img src="assets/img/comprimidas/comp-a3.png" alt="Detalle 1" loading="lazy">
         </a>
-        <a class="tile" href="assets/img/a5.JPG" target="_blank" rel="noopener">
-          <img src="assets/img/comprimidas/comp-a5.JPG" alt="Detalle 2" loading="lazy">
+        <a class="tile" href="assets/img/a5.jpg" target="_blank" rel="noopener">
+          <img src="assets/img/comprimidas/comp-a5.jpg" alt="Detalle 2" loading="lazy">
         </a>
         <a class="tile" href="assets/img/a2.png" target="_blank" rel="noopener">
           <img src="assets/img/comprimidas/comp-a2.png" alt="Detalle 3" loading="lazy">
